# flexsweep

./: .gitignore  .readthedocs.yaml  README.md  meta.yaml  pyproject.toml
_build/html/: .buildinfo  command_line.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
data/: chb_spiedel_2019.yaml  discoal  three_epochs_005.yaml  three_epochs_01.yaml  three_epochs_1.yaml  two_epoch_05.yaml  yri_msmc2.yaml  yri_spiedel_2019.yaml
docs/: advanced_usage.rst  api.rst  basic_usage.rst  cms.rst  conf.py  enrichment.rst  fs_v2.txt  index.rst  installation.rst  introduction.rst  polarize.rst  prediction.rst  requirements.txt  scan.rst
flexsweep/: __init__.py  cms.py  cnn.py  data.py  enrichment.py  fv.py  main.py  polarize.py  scan.py  simulate_discoal.py  utils.py
flexsweep/__pycache__/: fv.compute_r2_matrix-2560.py310.1.nbc  fv.compute_r2_matrix-2560.py310.nbi  fv.compute_r2_matrix-2564.py310.1.nbc  fv.compute_r2_matrix-2564.py310.nbi  fv.easy_likelihood-2993.py310.1.nbc  fv.easy_likelihood-2993.py310.nbi  fv.easy_likelihood-2997.py310.1.nbc  fv.easy_likelihood-2997.py310.nbi  fv.omega-2580.py310.1.nbc  fv.omega-2580.py310.nbi  fv.omega-2584.py310.1.nbc  fv.omega-2584.py310.nbi  fv.r2-2529.py310.1.nbc  fv.r2-2529.py310.nbi  fv.r2-2533.py310.1.nbc  fv.r2-2533.py310.nbi  fv.rank_with_duplicates-2115.py310.1.nbc  fv.rank_with_duplicates-2115.py310.nbi  fv.rank_with_duplicates-2119.py310.1.nbc  fv.rank_with_duplicates-2119.py310.nbi  fv.sweep_likelihood-3009.py310.1.nbc  (+3 more)
flexsweep/src/: Cargo.toml  maf.rs  main.rs  polarize.rs
recipe/: build.sh  meta.yaml
src/: Cargo.toml  est_sfs.rs  lib.rs  main.rs
tests/: test_fast_skew_kurt.py  test_haf_top.py  test_r2_float32.py
(+7 files in other folders)
