[project]
name = "flexsweep"
version = "1.9"
description = ""
authors = [{ name = "Jesus Murga-Moreno", email = "murgamoreno@gmail.com" }]
requires-python = ">=3.12,<3.13"
readme = "README.md"


license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "scipy>=1.14.0,<2",
    "scikit-allel>=1.3.8,<2",
    "scikit-learn>=1.5.1,<2",
    "joblib>=1.4.2,<2",
    "threadpoolctl>=3.5.0,<4",
    "click>=8.1.7,<9",
    "numpy==1.26.4",
    "numba>=0.60.0,<0.61",
    "demes>=0.2.3,<0.3",
    "tensorflow[and-cuda]>=2.18.0,<3",
    "pyarrow>=21.0.0,<22",
    "matplotlib>=3.9.2,<4",
    "polars>=1.14.0,<2",
    "polars-bio>=0.20.1,<1",
    "tbb>=2022.1.0,<2023",
    "tqdm>=4.67.1,<5",
]

[project.urls]
Homepage = "https://github.com/jmurga/flexsweep"
Repository = "https://github.com/jmurga/flexsweep"


[project.scripts]
flexsweep = "flexsweep.main:cli"

[tool.uv.build-backend]
module-name = ["flexsweep"]
module-root = ""

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "sphinx>=9.1.0",
    "sphinx-rtd-theme>=3.1.0",
]
