[package]
name = "polarize"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "polarize"
path = "main.rs"

[dependencies]
argmin = "0.11.0"
argmin-math = "0.5.1"
clap = { version = "4.5.21", features = ["derive"] }
flate2 = "1.0.35"
noodles-vcf = "0.83.0"
rand = "0.9.2"
smallvec = "1.15.1"
thiserror = "2.0.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
